--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.15.0",
     "github-slugger": "^2.0.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.20",
@@ -36,6 +37,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hover-card": "^0.3.0",
+    "react-markdown": "^9.0.3",
+    "react-masonry-css": "^1.0.16",
+    "rehype-raw": "^7.0.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
